--- a/tekton/secrets/github-example.yaml
+++ b/tekton/secrets/github-example.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 metadata:
   name: github
 data:
-  token: ZGY1NWMxZGU0NDJhOGZlZWNjYzc3MjdkYTNhZTI2MTM5MTc0NWRhNQ==
+  token: cmVwbGFjZW1l
   user: cmVwbGFjZW1l
 type: Opaque
